Load contract storage slots by using chunks
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>